# nyc-governance-organizations

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COLLEAGUE_REVIEW_CHECKLIST.md  FUTURE_IMPROVEMENTS.md  GOVERNANCE_STRUCTURE_SCHEMA_DECISIONS.md  Makefile  PHASE_II.2_FINDINGS.md  PHASE_II.2_STATUS.md  PHASE_II_HANDOFF.md  PHASE_II_PLAN.md  PHASE_II_STATUS.md  PROJECT_PLAN.md  README.md  SCRIPTS.md  TESTING_RECOMMENDATIONS.md  compare_datasets.py  compare_field_values.py  compare_to_source.py  create_crosswalk.py  export_dataset.py  manage_schema.py  process_decisions.py  pyproject.toml  test_pandas_read.py  utility_name_parser.py
.github/workflows/: publish-release.yml
configs/: README.md  mcp-development.json  mcp-production.json  security-settings.json
data/: README.md  changelog.csv  directory_logic_changelog.csv  directory_rules_snapshot.json
data/analysis/: moa_coverage_gaps.csv  moa_crosswalk_validation.csv  phase_ii_validation_report.csv
data/audit/: NYCGovernanceOrganizations_v0_3_CHANGELOG.csv  changelog_v0_10_recovery_step2.csv  changelog_v0_10_step2.csv  changelog_v0_11_step1.csv  changelog_v0_11_step2.csv  changelog_v0_12_step2.csv  changelog_v0_14_step2.csv  changelog_v0_15.csv  changelog_v0_15_step1.csv  changelog_v0_16_step2.csv  changelog_v0_5_step1.csv  changelog_v0_5_step2.csv  changelog_v0_6_step1.csv  changelog_v0_6_step2.csv  changelog_v0_7_step1.csv  changelog_v0_7_step2.csv  (+2 more)
docs/: APPOINTMENTS_MONITOR.md  ARCHITECTURE_DIRECTORY_LOGIC.md  BACKLOG.md  CHANGELOG_SPEC.md  DIRECTORY_FIELD_CHANGELOG.md  DIRECTORY_LOGIC.md  GITHUB_RELEASE_GUIDE.md  LISTED_IN_NYC_GOV_AGENCY_DIRECTORY_LOGIC.md  NYC_Agencies_and_Governance_Organizations_Data_Dictionary.xlsx  PHASE_II_SCHEMA.md  PHASE_I_SCHEMA.md  PHASE_I_SCHEMA_FIELDS.txt  SCHEMA.md  SCHEMA_VERSION_COMPARISON.md  nycgo-edit-publish-pipeline-standalone.html  nycgo-edit-publish-pipeline.bpmn  nycgo-edit-publish-pipeline.html  nycgo-edit-publish-pipeline.mermaid.md  run_artifacts.md
notebooks/: phase2_profile.md
schemas/: SCHEMA_CHANGELOG.md  nycgo_golden_dataset.tableschema.json  nycgo_published_dataset.tableschema.json
scripts/: check_schema_changes.py  export_socrata_json.py  generate_directory_docs.py  scan_appointments.py  test_directory_regression.py  validate_release_asset.py
src/: __init__.py  apply_edits.py  data_exploration.py  process_golden_dataset.py  run_global_rules.py  utility_case_converter.py
tests/: test_apply_qa_edits.py  test_changelog_schema.py  test_directory_rules.py  test_export_directory_changelog.py  test_populate_officer_name_parts.py  test_recordid_generation.py
(+694 files in other folders)
