[project]
name = "nyc-governance-organizations"
version = "0.1.0"
description = "Project for processing NYC governance organizations data."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Nathan Storey"},
]
maintainers = [
  {name = "Nathan Storey"},
]
keywords = ["data analysis", "python", "nyc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0",
    "python-dateutil",
    "ftfy>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/MODA-NYC/nyc-governance-organizations"
Repository = "https://github.com/MODA-NYC/nyc-governance-organizations"
Issues = "https://github.com/MODA-NYC/nyc-governance-organizations/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["process_golden_dataset", "data_exploration"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
    "C90", # mccabe complexity
    "B",  # flake8-bugbear
]
ignore = []
fixable = ["ALL"]
unfixable = []

# [tool.ruff.format]
# # Enable formatting using Ruff.
# # If you want to use Black as the primary formatter,
# # you might configure this to be Black-compatible or disable it.
# # For now, let's enable it.
# # quote-style = "double"
# # indent-style = "space"
# # skip-magic-trailing-comma = false
# # line-ending = "auto"

[tool.black]
line-length = 88
# target-version = ['py310'] # Uncomment if you want to specify target Python versions

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --color=yes"
testpaths = [
    "tests",
]
# python_files = "test_*.py tests_*.py"
# python_classes = "Test* Tests*"
# python_functions = "test_* tests_*"
